syntax = "proto3";

// 声明包为当前目录下的 protos
option go_package = "./protos";

import  "common.proto";

message UserSelector {
  optional int64 ID = 1;
  optional string Username = 2;
}

message User {
  int64 ID = 1;
	string Username = 3;
  string Password = 4;
  string CreatedTime = 5;
  string UpdatedTime = 6;
  optional string DeletedTime = 7;
  optional string DisabledTime = 8;
}

message SignInRequest {
  UserSelector Selector = 1;
  string Password = 2;
}

message SignInResponse {
  State State = 1;
  string Message = 2;
  string AuthenticationToken = 3;
}

message SignUpRequest {
  string Username = 1;
  string Password = 2;
}

message SignUpResponse {
  State State = 1;
  string Message = 2;
}

message SignOutRequest {
  
}

message SignOutResponse {
  State State = 1;
  string Message = 2;
}

message QueryUsersRequest {
  UserSelector Selector = 1;
  optional SortOption Sort = 2;
  optional PaginationOption Pagination = 3;
}

message QueryUsersResponse {
  message DataType {
    uint64 Total = 1;
    repeated User Users = 2;
  }

  State State = 1;
  string Message = 2;
  DataType Data = 3;
}

message DeleteUserRequest {
  UserSelector Selectors = 1;
}

message DeleteUserResponse {
  State State = 1;
  string Message = 2;
}

service AccountService {
  rpc SignIn(SignInRequest)returns(SignInResponse){} // 登录
  rpc SignUp(SignUpRequest)returns(SignUpResponse){} // 注册
  rpc SignOut(SignOutRequest)returns(SignOutResponse){} // 登出
  rpc QueryUsers(QueryUsersRequest)returns(QueryUsersResponse){} // 查询用户
  rpc DeleteUser(DeleteUserRequest)returns(DeleteUserResponse){} // 删除用户
}
